--- a/zadanie-1-formularz-html5/css/style.css
+++ b/zadanie-1-formularz-html5/css/style.css
@@ -37,10 +37,9 @@ input:focus {
     color: white;
 }
 
-form input[type="radio"] {
+form label[for*="male"] {
     display: inline;
-    margin-bottom: 10px;
-}
+} 
 
 form input[type="checkbox"], form label[for="agreement"] {
     display: inline;
